<resources>
    <string name="app_name">BelajarAlFatihah</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_quran">Al-Quran</string>
    <string name="title_setting">About</string>
    <string name="cd_nomor_surat">Nomor Surat</string>
    <string name="number">1</string>
    <string name="name_surah">Name Surah</string>
    <string name="name_tafsir">Pencarian Tafsir</string>
    <string name="desc_ayat">Desc Ayat</string>
    <string name="arabic">ARABIC</string>
    <string name="oops">Oops! Afwan akses ditutup</string>
    <string name="cek_connection">Silahkan hidupkan koneksi internet dan coba kembali</string>
    <string name="refresh">Refresh</string>
    <string name="ic_back">Tombol Kembali</string>
    <string name="tafsir">Tafsir</string>
    <string name="indo">Indonesia</string>
    <string name="url_wa">https://api.whatsapp.com/send?phone=%1$s&amp;text=%2$s</string>
    <string name="content_menu_keutamaan_muqaddimah">Surat Al-Fâtihah merupakan surat yang mulia.Yang mempunyai urgensi yang agung dan keutamaan
yang banyak. Sehingga kita wajib untuk terus belajar
membacanya dengan benar, sebagaimana yang
diturunkan.
Dan agar terpacu bersemangat mempelajari surat
Al-Fâtihah. Kami sampaikan diantara keutamaan surat
Al-Fâtihah. yaitu:</string>
    <string name="content_menu_keutamaan_title_rukun">Rukun Shalat</string>
    <string name="content_menu_keutamaan_title_rukun_desc">Al-Fâtihah merupakan rukun shalat. Shalat tidak sah kecuali dengannya.Sebagaimana riwayat dari Ubadah bin Somit
radhiallahu anhu sesungguhnya Rasulullah sallallahu alaihi wa sallam bersabda:
“Tidak (sah) shalat bagi orang yang tidak membaca Fatihatul Kitab (Al-Fâtihah ).”
( Hr Bukhari, 756 dan Muslim, 394 )
\nAl-Imâm An-Nawawi rahimahullah mengatakan tentang hadits ini :
        “Hadits ini (menunjukkan) kewajiban membaca AlFâtihah dan itu merupakan keharusan. Shalat tidak sah kecuali dengan membacanya. Lain halnya, jika orang tersebut tidak mampu. Ini adalah mazhab Malik, Syafii dan mayoritas para ulama dari kalangan para shahabat, tabiin dan (generasi) setelahnya." (Syarh Shohih Muslim 4/77)
    </string>
    <string name="content_menu_keutamaan_title_suratmulia">Surat paling mulia</string>
    <string name="content_menu_keutamaan_title_suratmulia_desc">Sebagaimana dalam Hadits dari Abu Hurairah radhiallahu anhu sesungguhnya Rasulullah sallallahu alaihi wa sallam berkata kepada Ubay bin Ka’b:
“Apakah engkau suka aku ajarkan kepadamu surat
yang belum diturunkan di Taurat, Injil, Zabur tidak
juga dalam Al-Furqan sepertinya?" Dia menjawab, “Ya. Wahai Rasulullah." Rasulullah sallallahu’alaihi
wa sallam bersabda, “Bagaimana anda membaca
dalam shalat?" Beliau menjawab, “Membaca Ummul Qur’an (Al-Fâtihah).”
        \nMaka Rasulullah sallallahu’alaihi wa sallam bersabda, “Demi jiwaku yang ada ditangan-Nya. Tidak diturunkan dalam Taurat, Injil, Zabur tidak juga dalam Al-Furqan (surat) semisalnya.” ( Hr At-Tirmizi, no. 2875 Dishahihkan Al-Albany dalam Shahih Tirmizi)
    </string>
    <string name="content_menu_keutamaan_title_sabulmatsani">Assab’ul Matsani</string>
    <string name="content_menu_keutamaan_title_sabulmatsani_desc">Dia adalah Assab’ul Matsani (tujuh ayat yang
    diulang-ulang). Yang dimana kemuliaan ini difirmankan oleh Allah dalam Al-Qur’ân
        “Dan sesungguhnya Kami telah berikan kepadamu tujuh ayat yang dibaca berulang-ulang dan Al Quran
yang agung.” (QS. Al-hijr: 87). \n\nDan iriwayatkan pula oleh Al-Imâm Al-Bukhari, no. 4474 dari Abu Said bin Al-Mualla, "Sesungguhnya Rasulullah sallallahu’alaihi wa sallam bersabda kepadanya:
“Aku akan ajarkan kepadamu suatu surat yang paling utama dalam Al-Qur’ân sebelum engkau keluar dari masjid." Kemudian beliau memegang tanganku. Ketika ingin keluar (masjid) saya katakan kepada beliau, “Tidakkah engkau mengatakan kepada saya akan mengajarkan kepadaku surat yang paling agung
dalam Al-Qur’ân?" Beliau menjawab, “Al-Hamdulillahi rabbil’alamin (Al-Fâtihah ), dia adalah As-Sab’ul Matsani (tujuh ayat yang diulang-ulang) dan Al-Qur’ânul Azim yang diberikannya.”
\nAl-Hafidz ibnu Hajar Al-Asqolany berkata, “Ada perbeda dalam maknanya, dikatakan ‘Al-Matsani’ karena diulang pada setiap rakaat. Ada yang mengatakan karena memuji kepada Allah Ta’ala, atau, karena dikhususkan untuk umat ini, dimana (tidak diturunkan) pada umat sebelumnya.’ ( Fathul Bari 8/121 )    </string>
    <string name="content_menu_keutamaan_title_ummulquran">Ummul Qur\'an</string>
    <string name="content_menu_keutamaan_title_ummulquran_desc">
        Al-Fâtihah disebut sebagai ummul Qur\'an ( induknya Al-Qur’ân ). Dalam sebuah hadits dikatakan : Dari Abu Hurairah
radhiyallahu ‘anhu, Rasulullah shallallahu ‘alaihi wasallam bersabda:
        Alhamdulillahi Rabbil ‘alamin (yaitu Al-Fâtihah )
adalah Ummul Qur’an dan Ummul Kitab serta As-Sab’ul Matsani (tujuh ayat yang diulang-ulang).” (HR.
Abu Dawud, Sahih)
\n\nAda beberapa hal yang menyebabkan Al-Fâtihah
disebut sebagai Ummul Qur’an dan Ummul Kitab.
Diantaranya adalah:
Alasan Pertama: karena Al-Fâtihah mengandung
dasar dari seluruh perincian seluruh ayat Alquran.
Yaitu : masalah Aqidah, Ibadah, bahkan siroh. Karena
ayat-ayat Al-Qur’ân menjelaskan tengang tauhid yang
benar, ibadah yang lurus serta kisah para manusia
pilihan Allah جل جلاله.
        \nDemikian pula Al-Fâtihah . Yang
disebutkan disana tentang aqidah. Penyembahan
harus hanya untuk Allah جل جلاله Tuhan semesta alam. Kita
beribadah padanya dan meminta pertolongan. Lantas
surat ini ditutup dengan kisah orang yahudi yang
disebut sebagai al-maghdhub kaum yang Allah جل جلاله
murkai. Dan nashrani, yaitu kaum yang tersesat.
Alasan kedua: Al-Fâtihah sebagai pembuka
Alquran dalam urutan surah-surah di mushaf
Alquran dan menjadi surah pertama kali yang dibaca
di dalam salat. Imâm Al-Bukhari rahimahullah
berkata,
"(Al-Fâtihah ) dinamakan Ummul Kitab, karena penulisan Alquran dimulai dengannya dan bacaan Alquran dalam salat dimulai dengannya.” ( Fathul Bari 5/8 )
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_menu_cara_title">Cara Membaca Al-Fatihah</string>
    <string name="content_menu_cara_alfatihah_1">بِسْمِ ٱللَّهِ ٱلرَّحْمَـٰنِ ٱلرَّحِيمِ</string>
    <string name="content_menu_cara_alfatihah_1_desc">Cara membaca بِسْمِ ٱللَّهِ:
\n-	huruf bi, dibaca jahr jelas. Lantas dimasukan ke huruf س. Dan jangan laukukan ikhtilash (tersamar) yaitu terlalu cepat membaca ba dan sin sehingga tidak jelas jahrnya.
\n-	huruf sin yang sukun, berikan sifat rokhowahnya. Yaitu biarkan suara mengalir. Dan jangan langsung dihentikan. Sehingga seharusnya terdengar: Biss
\n-	huruf mim huruf jahr, dan dia langsung ke lafadz jalalah. lafadz jalálah dibaca tarqíq. Sehingga dibaca lláh, bukan llôh
        \n\nCara membaca: ٱلرَّحْمَـٰنِ ٱلرَّحِيمِ
\n-	huruf ro dibaca tafkhím. Yaitu meningginya suara kelangit-langit tanpa memonyongkan bibir, kemudian masukan ke huruf ح sukun
\n-	huruf ح sukun pastikan keluar dari tenggorokan bagian tengah dan diberikan sifatnya yaitu diantaranya: rokhowah, yaitu suara masih mengalir saat disukunkan.
\n-	huruf mim dibaca jahr dan dipanjangkan 2 harokat
\n-	huruf nun kasroh dibaca jahr dan rahang diturunkan, dan bibir ditarik karena kasroh, kemudian dimasukan ke huruf ro tafkhim.
\n-	huruf ح dari arrohiim berharokat kasroh, bukan sukun. Sehingga bukan dibaca : arrohhim. Tapi arrohím.
\n-	lantas panjangkan dan saat bertemu mim yang disukunkan, suara mim masih mengalir, namun tentu tidak berlebihan
</string>
    <string name="content_menu_cara_alfatihah_2">ٱلْحَمْدُ لِلَّهِ رَبِّ ٱلْعَـٰلَمِينَ</string>
    <string name="content_menu_cara_alfatihah_2_desc">Cara membaca: ٱلْحَمْدُ
\n-	huruf hamzah أ dibaca jahr ( jelas ) A. tanpa imalah sehingga malah dibaca menjadi e atau di isti\'la-kan menjadi o.
\n-	Lantas masukan ke huruf lam sukun ل, dan biarkan suara mengalir sedikit karena sifatnya bainiyyâh. Dan jangan diqolqolahkan menjadi ale
\n-	Lantas siapkan mengeluarkan huruf dari tenggorokan (Al-Halq) bagian tengah, yaitu huruf ح. Kemudian masukanlah ke huruf mim sukun ح م dan biarkan suara mim mati mengalir sejenak. Karena sifatnya bainiyah. Dan jangan dipantulkan, menjadi alhame
\n-	Kemudian langsung ujung lidah menempel di bagian dalam gigi seri bagian atas, dan ucapkanlah
\n\nCara Membaca: لِلَّهِ
\n-	Ucapkan lafadz jalalah. kalimat Allah جل جلاله ini dengan tipis / tarqíq, sehingga dibaca lillah. Dan panjangkan lam ke dua, sehingga menjadi lilláhi.
\n\nCara Membaca: رَبِّ ٱلْعَـٰلَمِين
\n-	Huruf ro dibaca Tafkhím yaitu mengangkat suara naik ke langit-langit mulut. Tanpa memonyongkan bibir.
\n-	Kemudian dimasukan ke dalam huruf Ba bertasydid, Lantas turunkan rahang dan tarik bibir saat penyebutan kemudian ب karena ba berharokat kasroh dan masukanlah ia ke dalam huruf ح ل. huruf lam tidak memantul menjadi le
\n-	Dan pastikan saat beralih ke huruf ع yang keluar di tengah tenghorokan. bukan bawah tenggorokan. Karena jika huruf keluar dari bawah tenggorokan, maka hurufnya bukanlah ع tapi malah أ. Lantas panjangkan huruf ع dua harokat.
\n-	Dan kemudian selanjutnya membaca ٱلْعَـٰلَمِين
</string>
    <string name="content_menu_cara_alfatihah_3">ٱلرَّحْمَـٰنِ ٱلرَّحِيمِ</string>
    <string name="content_menu_cara_alfatihah_3_desc">Cara membaca: ٱلرَّحْمَـٰنِ ٱلرَّحِيمِ
\n-	huruf ro dibaca tafkhím. Yaitu meningginya suara kelangit-langit tanpa memonyongkan bibir, kemudian masukan ke huruf ح sukun
\n-	huruf ح sukun pastikan keluar dari tenggorokan bagian tengah dan diberikan sifatnya yaitu diantaranya: rokhowah, yaitu suara masih mengalir saat disukunkan.
\n-	huruf mim dibaca jahr dan dipanjangkan 2 harokat
\n-	huruf nun kasroh dibaca jahr dan rahang diturunkan, dan bibir ditarik karena kasroh, kemudian dimasukan ke huruf ro tafkhim.
\n-	huruf ح dari arrohiim berharokat kasroh, bukan sukun. Sehingga bukan dibaca : arrohhim. Tapi arrohím.
\n-	lantas panjangkan dan saat bertemu mim yang disukunkan, suara mim masih mengalir, namun tentu tidak berlebihan</string>
    <string name="content_menu_cara_alfatihah_4">مَـٰلِكِ يَوْمِ ٱلدِّينِ</string>
    <string name="content_menu_cara_alfatihah_4_desc">Cara membaca : مَـٰلِكِ
\n-	Dalam qiroah hafs, ma dibaca panjang 2 harokat. Buka mulut pertengahan saat membaca harokat fathah. Kemudian tarik kedua bibir menyamping dan 28 turunkan rahang saat membaca لِ dan كِ karena ia huruf kasroh.
\n-	Kemudian karena ك adalah huruf hams, maka berikanlah haknya. Yaitu ada suara tersamar saat melafalkannya.
\n\nCara membaca : يَوْمِ ٱلدِّين
\n-	Yaum dibaca Layyin ( lembut ) dengan memonyongkan bibir disebabkan adanya huruf syafatain yaitu waw mati. Dibaca mengalir saja, dan tidak boleh ada hentakan atau penekanan, sehingga terbaca : Youm.
\n-	kemudian tarik bibir dan turunkan rahang saat mengucapkan مِ lantas masukan ke dal ber-tasydid
\n-	Setelah dimasukan ke dal, huruf dal dibaca kasroh kembali lantas dipanjangkan, dan berhenti di nun sukun dengan memberikan sifat bainiyah ( suara biarkan mengalir sedikit ) saat nun disukunkan.
</string>
    <string name="content_menu_cara_alfatihah_5">إِيَّاكَ نَعْبُدُ وَإِيَّاكَ نَسْتَعِينُ</string>
</resources>