<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="80dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/ic_back"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/tittle_toolbar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/name_surah"
                    android:textColor="@color/text_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:singleLine="true" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>



        <!-- Image Section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/readbook_2" />
        </androidx.cardview.widget.CardView>

        <!-- Title Section -->

        <!-- Content Section -->
        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/title_home"
            android:textColor="@color/text_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/quicksand"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="4dp"
            android:paddingEnd="8dp"
            android:text="@string/desc_ayat"
            android:textAlignment="textStart"
            android:textColor="@color/text_title"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>
