<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cd_detail_surah"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/img_number" />

            <TextView
                android:id="@+id/tv_detail_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/number"
                android:textColor="@color/text_title"
                android:textSize="10sp"
                card_view:layout_constraintBottom_toBottomOf="@+id/imageView"
                card_view:layout_constraintEnd_toEndOf="@+id/imageView"
                card_view:layout_constraintStart_toStartOf="@+id/imageView"
                card_view:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/tv_detail_arab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/utsmany_font"
                android:text="@string/arabic"
                android:textColor="@color/text_title"
                android:textDirection="rtl"
                android:textSize="27sp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.5"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tv_detail_indo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/quicksand"
                android:text="@string/indo"
                android:textColor="@color/sub_text"
                android:textSize="14sp"
                android:textStyle="italic"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.48"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/tv_detail_arab" />

            <TextView
                android:id="@+id/tv_title_tafsir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/tafsir"
                android:textColor="@color/text_title"
                app:layout_constraintEnd_toStartOf="@+id/down_button"
                card_view:drawableStartCompat="@drawable/ic_dalil"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_detail_indo" />

            <ImageButton
                android:id="@+id/down_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_arrow_down"
                card_view:layout_constraintBottom_toBottomOf="@+id/tv_title_tafsir"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="@+id/tv_title_tafsir" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/text_title"
            app:circularflow_defaultRadius="8dp" />

        <TextView
            android:id="@+id/tv_tafsir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/quicksand"
            android:paddingBottom="12dp"
            android:text="@string/tafsir"
            android:textColor="@color/sub_text" />

    </LinearLayout>

</androidx.cardview.widget.CardView>